# RepoEval

./: .gitignore  AGENTS.md  Makefile  docker-compose.yml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-authentication/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_tags_to_projects.py  0003_create_repos_and_snapshots.py  0005_create_analysis_tables.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/analysis/: analyzers.py  checkpoint.py  duplication.py  models.py  pipeline.py  router.py  schemas.py  scoring.py  tasks.py
backend/app/auth/: dependencies.py  jwt_service.py  router.py  schemas.py
backend/app/ingestion/: checkpoint.py  github_client.py  pipeline.py  rate_limiter.py  tasks.py
backend/app/models/: __init__.py  project.py  repo.py  session.py  snapshot.py  user.py
backend/app/projects/: router.py  schemas.py
backend/app/repos/: router.py  schemas.py
backend/tests/: test_jwt_service.py
frontend/: package.json
frontend/app/: auth-provider.tsx  globals.css  layout.tsx  page.tsx
frontend/lib/: api-analysis.ts  api-projects.ts  api-repos.ts  auth.ts  use-analysis-polling.ts  use-ingestion-polling.ts
(+50 files in other folders)
